// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalPopUp Basic 1`] = `
<body>
  @media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

<div />
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100vh;
  width: 100vw;
}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

<div>
    <div
      class="c0"
    />
    <button
      type="button"
    >
      TEST OPEN MODAL
    </button>
  </div>
  .c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 512px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px #999999;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 16px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-left: 16px;
  padding-right: 16px;
  padding-bottom: 16px;
}

.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background-color: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background-color: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: absolute;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: hWAzxx 0.2s ease-in-out forwards;
  animation: hWAzxx 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

.c8 {
  font-size: 12px;
  line-height: 16px;
  color: #65707d;
}

.c11 {
  font-size: 12px;
  line-height: 16px;
  font-weight: 600;
}

.c10 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  margin-right: 8px;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  background-color: #E15151;
  color: #f8f8f8;
  border-radius: 3.2px;
}

.c12 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  margin-right: 8px;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c6 {
  font-size: 14.666666666666666px;
  line-height: 18.666666666666668px;
  max-width: 234.66666666666666px;
  font-weight: 600;
  color: #65707d;
}

@media only screen and (max-width:512px) {
  .c5 {
    border-bottom: solid 1px #999999;
  }
}

@media only screen and (max-width:512px) {
  .c5 {
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media only screen and (max-width:512px) {
  .c5 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    padding: 16px;
  }
}

@media only screen and (max-width:512px) {
  .c9 {
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media only screen and (max-width:512px) {
  .c9 {
    padding-bottom: 16px;
  }
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

@media only screen and (max-width:512px) {
  .c6 {
    font-size: 12px;
    line-height: 16px;
    max-width: 192px;
  }
}

<div>
    <div
      aria-hidden="false"
    >
      <div
        class="c0"
        tabindex="-1"
      >
        <div
          class="c1"
        />
        <div
          class="c2"
        >
          <a
            aria-hidden="true"
            class="c3"
            tabindex="-1"
          />
          <div
            aria-label="modal-pop-up"
            class="c4"
            role="dialog"
          >
            <div
              class="c5"
            >
              <h3
                class="c6"
              >
                TEST MODAL
              </h3>
            </div>
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                TEST MESSAGE CONTENT
              </span>
            </div>
            <div
              class="c9"
            >
              <button
                class="c10"
                type="button"
              >
                <span
                  class="c11"
                >
                  OK
                </span>
              </button>
              <button
                class="c12"
                type="button"
              >
                <span
                  class="c11"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalPopUp Before opening pop-up 1`] = `
<body>
  <div />
  <div />
</body>
`;

exports[`ModalPopUp Custom render elements - custom body 1`] = `
<body>
  @media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

<div />
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100vh;
  width: 100vw;
}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

<div>
    <div
      class="c0"
    />
    <button
      type="button"
    >
      TEST OPEN MODAL
    </button>
  </div>
  .c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 512px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px #999999;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 16px;
}

.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background-color: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background-color: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: absolute;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: hWAzxx 0.2s ease-in-out forwards;
  animation: hWAzxx 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

.c6 {
  font-size: 14.666666666666666px;
  line-height: 18.666666666666668px;
  max-width: 234.66666666666666px;
  font-weight: 600;
  color: #65707d;
}

@media only screen and (max-width:512px) {
  .c5 {
    border-bottom: solid 1px #999999;
  }
}

@media only screen and (max-width:512px) {
  .c5 {
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media only screen and (max-width:512px) {
  .c5 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    padding: 16px;
  }
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

@media only screen and (max-width:512px) {
  .c6 {
    font-size: 12px;
    line-height: 16px;
    max-width: 192px;
  }
}

<div>
    <div
      aria-hidden="false"
    >
      <div
        class="c0"
        tabindex="-1"
      >
        <div
          class="c1"
        />
        <div
          class="c2"
        >
          <a
            aria-hidden="true"
            class="c3"
            tabindex="-1"
          />
          <div
            aria-label="modal-pop-up"
            class="c4"
            role="dialog"
          >
            <div
              class="c5"
            >
              <h3
                class="c6"
              >
                <span>
                  TEST MODAL
                </span>
              </h3>
            </div>
            <div
              class="c7"
            >
              <div>
                <span>
                  TEST MESSAGE CONTENT
                </span>
              </div>
            </div>
            <button
              type="button"
            >
              OK
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalPopUp Custom render elements 1`] = `
<body>
  @media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

<div />
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100vh;
  width: 100vw;
}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

<div>
    <div
      class="c0"
    />
    <button
      type="button"
    >
      TEST OPEN MODAL
    </button>
  </div>
  .c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 512px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px #999999;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 16px;
}

.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background-color: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background-color: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: absolute;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: hWAzxx 0.2s ease-in-out forwards;
  animation: hWAzxx 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

.c8 {
  font-size: 12px;
  line-height: 16px;
  color: #65707d;
}

.c6 {
  font-size: 14.666666666666666px;
  line-height: 18.666666666666668px;
  max-width: 234.66666666666666px;
  font-weight: 600;
  color: #65707d;
}

@media only screen and (max-width:512px) {
  .c5 {
    border-bottom: solid 1px #999999;
  }
}

@media only screen and (max-width:512px) {
  .c5 {
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media only screen and (max-width:512px) {
  .c5 {
    padding-top: 4px;
    padding-bottom: 4px;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    padding: 16px;
  }
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

@media only screen and (max-width:512px) {
  .c6 {
    font-size: 12px;
    line-height: 16px;
    max-width: 192px;
  }
}

<div>
    <div
      aria-hidden="false"
    >
      <div
        class="c0"
        tabindex="-1"
      >
        <div
          class="c1"
        />
        <div
          class="c2"
        >
          <a
            aria-hidden="true"
            class="c3"
            tabindex="-1"
          />
          <div
            aria-label="modal-pop-up"
            class="c4"
            role="dialog"
          >
            <div
              class="c5"
            >
              <h3
                class="c6"
              >
                <span>
                  TEST MODAL
                </span>
              </h3>
            </div>
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                <span>
                  TEST MESSAGE CONTENT
                </span>
              </span>
            </div>
            <button
              type="button"
            >
              OK
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ModalPopUp Without Title 1`] = `
<body>
  @media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

<div />
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100vh;
  width: 100vw;
}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

@media only screen and (max-width:512px) {

}

<div>
    <div
      class="c0"
    />
    <button
      type="button"
    >
      TEST OPEN MODAL
    </button>
  </div>
  .c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 512px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 16px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-left: 16px;
  padding-right: 16px;
  padding-bottom: 16px;
}

.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  background: transparent;
  position: relative;
  z-index: 10;
  pointer-events: none;
  outline: none;
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
}

.c1 {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background-color: rgba(0,0,0,0.5);
  color: #f8f8f8;
  pointer-events: all;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 32px;
  background-color: #FFFFFF;
  color: #444444;
  outline: none;
  pointer-events: all;
  z-index: 15;
  position: absolute;
  max-height: calc(100% - 0px - 0px);
  max-width: calc(100% - 0px - 0px);
  border-radius: 4px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  -webkit-animation: hWAzxx 0.2s ease-in-out forwards;
  animation: hWAzxx 0.2s ease-in-out forwards;
}

.c3 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

.c6 {
  font-size: 12px;
  line-height: 16px;
  color: #65707d;
}

.c9 {
  font-size: 12px;
  line-height: 16px;
  font-weight: 600;
}

.c8 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  margin-right: 8px;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  background-color: #E15151;
  color: #f8f8f8;
  border-radius: 3.2px;
}

.c10 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  margin-right: 8px;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
}

@media only screen and (max-width:512px) {
  .c5 {
    padding: 16px;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    padding-left: 16px;
    padding-right: 16px;
  }
}

@media only screen and (max-width:512px) {
  .c7 {
    padding-bottom: 16px;
  }
}

@media only screen and (max-width:512px) {
  .c0 {
    position: absolute;
    width: 100%;
    height: 100%;
    min-height: 100vh;
  }
}

@media only screen and (max-width:512px) {
  .c1 {
    position: relative;
  }
}

@media only screen and (max-width:512px) {
  .c2 {
    position: relative;
    max-height: none;
    max-width: none;
    border-radius: 0;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
    -webkit-animation: none;
    animation: none;
    height: 100vh;
    width: 100vw;
  }
}

<div>
    <div
      aria-hidden="false"
    >
      <div
        class="c0"
        tabindex="-1"
      >
        <div
          class="c1"
        />
        <div
          class="c2"
        >
          <a
            aria-hidden="true"
            class="c3"
            tabindex="-1"
          />
          <div
            aria-label="modal-pop-up"
            class="c4"
            role="dialog"
          >
            
            <div
              class="c5"
            >
              <span
                class="c6"
              >
                TEST MESSAGE CONTENT
              </span>
            </div>
            <div
              class="c7"
            >
              <button
                class="c8"
                type="button"
              >
                <span
                  class="c9"
                >
                  OK
                </span>
              </button>
              <button
                class="c10"
                type="button"
              >
                <span
                  class="c9"
                >
                  Cancel
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
